--- a/client/Makefile
+++ b/client/Makefile
@@ -1,8 +1,8 @@
 
-all: client
+all: therm
 
-client: client.c
-	gcc client.c -o therm
+therm: client.c
+	gcc client.c -o therm -Wall
 
 clean:
-	rm -f client.o therm
+	rm -f therm
